--- a/app/views/shipping_options/edit.html.haml
+++ b/app/views/shipping_options/edit.html.haml
@@ -42,14 +42,18 @@
                             = f.text_field :tax, :class => "input-large"
                             %span.add-on %
                       .control-group
-                        %label.control-label{:for => "shipping_option[base_price_cents]"} Base Price
+                        %label.control-label{:for => "shipping_option[base_price]"} Base Price
                         .controls
-                          = f.text_field :base_price_cents, :class => "input-large"
+                          = f.text_field :base_price, :class => "input-large"
                           = f.select :base_price_currency, options_for_select(AVAILABLE_CURRENCIES, selected: @shipping_option.base_price_currency), {with_css_classes: false}, {class: "input-small"}
                           %br
                             %span.help-inline
                               Base price is ignored if option type is set to 'Free'.
-
+                      .control-group
+                        %label.control-label{:for => "shipping_option[base_price_cents]"} Cost Per Gram
+                        .controls
+                          = f.text_field :per_gram_price, :class => "input-large"
+                          = f.select :per_gram_price_currency, options_for_select(AVAILABLE_CURRENCIES, selected: @shipping_option.per_gram_price_currency), {with_css_classes: false}, {class: "input-small"}
                 .widget-foot
                   = f.submit "Update Shipping Option", class: "btn btn-success"
                   %button.btn{:type => "reset"} Reset
