--- a/app/views/checkout/new.html.haml
+++ b/app/views/checkout/new.html.haml
@@ -58,10 +58,23 @@
                           %h6.pull-left
                             Unique Items: #{@cart.total_unique_items} | Total Items: #{@cart.total_items}
                           %h4.pull-right
-                            Total: $#{number_with_precision @cart.total_cost, :precision => 2}
+                            Total: #{humanized_money_with_symbol(@cart.total_cost, no_cents_if_whole: false)}
                           .clearfix
                     #step2.step-pane
-                      SHIPPING - BASED ON STORE SETTINGS......
+                      Ship To:
+                      = @cart.user.name
+                      %br
+                      = @cart.user.address1
+                      %br
+                      - if @cart.user.address2.present?
+                        = @cart.user.address2
+                        %br
+                      = "#{@cart.user.city}, #{@cart.user.state}, #{@cart.user.zip}"
+                      %br
+                      = @cart.user.country.try(:name)
+                      %br
+                      Shipping Option for Your Country: #{@cart.store.shipping_type_for(@cart).humanize}
+                      Total Shipping Cost: #{humanized_money_with_symbol(@shipping, no_cents_if_whole: false)}
                     #step3.step-pane
                       %h6 Credit Card Information
                       %hr
