--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -27,7 +27,7 @@
       .span12
         %p
           %small
-            ©2015 Playmotrade, LLC. All rights reserved.
+            = "©#{Time.now.strftime('%Y')} Playmotrade, LLC. All rights reserved."
             %br
             Some Playmobil sets contain small parts that are NOT suitable for and may pose a hazard to children under 3 years of age. Playmobil® is a trademark of Geobra Brandstätter GmbH & Co. KG which does not sponsor, authorize, or endorse this site. The trademarks PLAYMOBIL®, PLAYMOBIL® SYSTEM X, PLAYMOBIL® RC TRAIN and PLAYMOBIL® FUNPARK and the copyrighted images of PLAYMOBIL® products are the sole and exclusive property of Geobra Brandstätter GmbH & Co. KG, which reserves all rights therein. Use of this web site constitutes acceptance of the Terms Of Service agreement and Privacy Policy
 
