--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -33,7 +33,9 @@
                 .control-group
                   %label.control-label{:for => "comment"} Comment
                   .controls
-                    = f.text_area(:comment)
+                .control-group
+                  .controls
+                    = recaptcha_tags
                 .form-actions
                   = submit_tag("Submit", class: "btn btn-primary")
             .clearfix
